; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_free_userplace.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_free_userplace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NOTIFY_MODE = common dso_local global i32 0, align 4
@userplace_kept = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @free_userplace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_userplace(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @NOTIFY_MODE, align 4
  %4 = call i32 @assert(i32 %3)
  %5 = load i32, i32* @userplace_kept, align 4
  %6 = add nsw i32 %5, -1
  store i32 %6, i32* @userplace_kept, align 4
  %7 = icmp sgt i32 %5, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @zfree(i32* %10, i32 4)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @zfree(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
